@@ -1,5 +1,7 @@
 Changes in robustHD version 0.1.1
 
+    + sparseLTS() and sparseLTSGrid() now store raw fitted values.
+
     + Parallel computing for sparseLTS() now available via OpenMP.
 
     + rlars() is now using C++ code for variable sequencing.
